style and collapse bug fixed

--- a/src/css/newTab.css
+++ b/src/css/newTab.css
@@ -1,5 +1,6 @@
 body {
   background-color: #191D20;
+  user-select: none;
 }
 
 #bookmark-container {
@@ -13,48 +14,91 @@ body {
 
 .category {
   display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  /*background-color: RGBA(63, 186, 155, .3);*/
-  background-color: RGBA(230, 233, 238, 0.1);
-  margin: 8px;
+  position: relative;
+  align-items: flex-start;
+  background-color: RGBA(230, 233, 238, 0.05);
+  margin: 16px 0;
   padding: 8px;
   box-sizing: border-box;
+  cursor: pointer;
+}
+
+.category.collapsed {
+  height: 40px;
+  overflow: hidden;
+}
+
+.category.collapsed .category,
+.category.collapsed .item {
+  display: none;
 }
 
 .category .title {
-  color: RGBA(230, 233, 238, 0.9);
+  color: rgba(237, 239, 243, 0.8);
   width: 120px;
   text-align: center;
+  text-transform: uppercase;
+  font-size: 11px;
+  letter-spacing: 1.5px;
+  font-weight: 600;
+  margin-top: 18px;
+  transition: all 0.2s ease-in-out;
+}
+
+.category.collapsed .title {
+  margin-top: 6px;
+  color: rgba(237, 239, 243, 0.4);
 }
 
 .category .content {
   width: 82%;
 }
 
+.category.collapsed .icon {
+  position: absolute;
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  opacity: 0.6;
+  background-image: url(../img/arrow.svg);
+  right: 24px;
+  top: 10px;
+  transform: rotate(-90deg);
+}
+
 .item {
   position: relative;
   display: inline-block;
-  margin: 4px;
-  background-color: RGBA(230, 233, 238, 0.15);
-  border-radius: 8px;
+  margin: 6px;
+  background-color: rgba(230, 233, 238, 0.1);
   user-select: none;
+  border-radius: 10px;
+  transition: all 0.2s ease-in-out;
+}
+
+.item:hover {
+  box-shadow: 0px 10px 30px 0px rgba(20, 22, 28, 0.2);
 }
 
 .item a {
   display: inline-block;
-  color: #fff;
-  height: 32px;
+  color: rgba(237, 239, 243, 0.8);
   line-height: 32px;
-  padding-left: 32px;
+  padding-left: 40px;
+  font-weight: 200;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 13px;
+  transition: all 0.2s ease-in-out;
+}
+
+.item:hover a {
+  color: rgba(237, 239, 243, 1.0);
 }
 
 .item a .favicon {
   position: absolute;
   top: 8px;
-  left: 8px;
+  left: 16px;
   height: 16px;
   width: 16px;
 }
@@ -64,7 +108,6 @@ body {
   float: right;
   color: #191D20;
   line-height: 32px;
-  height: 32px;
   width: 32px;
   cursor: pointer;
   opacity: 0;
@@ -79,22 +122,34 @@ body {
 
 /*LIGHT MODE*/
 body.lightmode {
-  background-color: #CCD0D9;
+  background-color: RGBA(203, 209, 227, 0.2);
 }
 
 .lightmode .category {
-  background-color: RGBA(255, 255, 255, 0.6);
-  border: 1px solid RGBA(25, 29, 32, 0.05);
+  background-color: rgba(204, 208, 217, 0.3);
 }
 
 .lightmode .category .title {
-  color: RGBA(25, 29, 32, 0.6);
+  color: RGBA(25, 29, 32, 0.7);
+}
+
+.lightmode .category.collapsed .title {
+  color: RGBA(25, 29, 32, 0.4);
+}
+
+.lightmode .category.collapsed .icon {
+  color: RGBA(25, 29, 32, 0.4);
+  filter: brightness(.5);
 }
 
 .lightmode .item {
-  background-color: RGBA(25, 29, 32, 0.1);
+  background-color: RGBA(255, 255, 255, 0.6);
+}
+
+.lightmode .item:hover {
+  box-shadow: 0px 10px 30px 0px rgba(20, 22, 28, 0.05);
 }
 
 .lightmode .item a {
-  color: RGBA(25, 29, 32, 0.6);
+  color: RGBA(25, 29, 32, 0.8);
 }
